Move statistical measurements to the lobster main loop.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -181,6 +181,7 @@
 		{% if good_jobs %}
 		<div style="margin-left:410px;">
 			<img src="workers-plot.png"></img>
+			<img src="turnover-hist.png"></img>
 			<img src="tasks-plot.png"></img>
 			<img src="fraction-hist.png"></img>
 			<img src="output-hist.png"></img>
