Fix cpu time reporting and add chirp transfer time stamp.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -136,6 +136,9 @@
 				<img class="good" src="processing-hist.png"></img>
 			</div>
 			<div class="good more">
+				<img class="good" src="processing-cpu-hist.png"></img>
+				<img class="good" src="processing-non-cpu-hist.png"></img>
+				<img class="good" src="stage-out-chirp-hist.png"></img>
 				<img class="good" src="stage-out-wait-hist.png"></img>
 				<img class="good" src="stage-out-wq-hist.png"></img>
 			</div>
