--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -34,7 +34,61 @@
 				color:#000000;
 				background-color:#B4B8C1;
 			}
+
+			ul.img-list {
+			padding: 0;
+			}
+
+			ul.img-list li {
+			display: inline-block;
+			position: relative;
+			}
+
+			ul.img-list img {
+			border-radius: 15px;
+			}
+
+			span.text-content {
+			background: rgba(0,0,0,0.6);
+			border-radius: 15px;
+			color: white;
+			display: table;
+			font-size: 1.5em;
+			height: 150px;
+			left: 15px;
+			position: absolute;
+			top: -5px;
+			width: 750px;
+			opacity: 0;
+			-webkit-transition: opacity 500ms;
+			-moz-transition: opacity 500ms;
+			-o-transition: opacity 500ms;
+			transition: opacity 500ms;
+			}
+
+			span.text-content span {
+			display: table-cell;
+			text-align: center;
+			vertical-align: middle;
+			}
+
+			ul.img-list li:hover span.text-content {
+			opacity: 1;
+			}
 		</style>
+
+		{% macro label_wrapper(img_name, label) %}
+			<li><img
+					{% for k, v in kwargs.iteritems() %}
+						{{ k }}="{{ v }}"
+					{% endfor %}
+				src="{{ img_name }}">
+				<span class="text-content"><span>
+					{{ label }}
+				</span></span>
+			</img></li>
+		{% endmacro %}
+
 		<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 		<script>
 			function src_replace(sel, a, b) {
@@ -117,31 +171,31 @@
 			<img src="time-detail-pie.png"></img>
 		</div>
 		<div style="margin-left:410px;">
-			<div class="good more">
-				<img class="good" src="eviction-hist.png"></img>
-			</div>
-			<div>
-				<img class="good" src="runtime-hist.png"></img>
-				<img class="good" src="overhead-hist.png"></img>
-			</div>
-			<div class="good more">
-			<img class="good" src="stage-in-hist.png"></img>
-			<img class="good" src="startup-hist.png"></img>
-			<img class="good" src="setup-release-hist.png"></img>
-			<img class="good" src="setup-cms-hist.png"></img>
-			<img class="good" src="file-open-hist.png"></img>
-			<img class="good" src="setup-job-hist.png"></img>
-			</div>
-			<div>
-				<img class="good" src="processing-hist.png"></img>
-			</div>
-			<div class="good more">
-				<img class="good" src="processing-cpu-hist.png"></img>
-				<img class="good" src="processing-non-cpu-hist.png"></img>
-				<img class="good" src="stage-out-chirp-hist.png"></img>
-				<img class="good" src="stage-out-wait-hist.png"></img>
-				<img class="good" src="stage-out-wq-hist.png"></img>
-			</div>
+			<div class="good more"><ul class="img-list">
+				{{ label_wrapper('eviction-hist.png', 'Time lost to eviction', class="good") }}
+			</div></ul>
+			<div><ul class="img-list">
+				{{ label_wrapper('runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
+				{{ label_wrapper('overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='good') }}
+			</ul></div>
+			<div class="good more"><ul class="img-list">
+				{{ label_wrapper('stage-in-hist.png', 'Time to transfer input files', class='good') }}
+				{{ label_wrapper('startup-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='good') }}
+				{{ label_wrapper('setup-release-hist.png', 'Time to set up release and initialize cms environment', class='good') }}
+				{{ label_wrapper('setup-cms-hist.png', 'Time from from wrapper ready to file requested', class='good') }}
+				{{ label_wrapper('file-open-hist.png', 'Time between requesting and opening file', class='good') }}
+				{{ label_wrapper('setup-job-hist.png', 'Time between opening file and begin processing the first event', class='good') }}
+			</ul></div>
+			<div><ul class="img-list">
+				{{ label_wrapper('processing-hist.png', 'Time between begin processing the first event and finish processing', class='good') }}
+			</ul></div>
+			<div class="good more"><ul class="img-list">
+				{{ label_wrapper('processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='good more') }}
+				{{ label_wrapper('processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='good more') }}
+				{{ label_wrapper('stage-out-chirp-hist.png', 'Time to chirp_put all output files to the stageout directory', class='good more') }}
+				{{ label_wrapper('stage-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='good more') }}
+				{{ label_wrapper('stage-out-wq-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='good more') }}
+			</ul></div>
 		</div>
 		{% else %}
 		<p>No successful jobs yet!</p>
