--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -165,7 +165,7 @@
 
 		<h2>Successful Jobs</h2>
 		{% if good_jobs %}
-		<p><a href="#" id="goodhist">statstics</a> <a href="#" id="goodprof">profile</a></p>
+		<p><a href="#" id="goodhist">statistics</a> <a href="#" id="goodprof">profile</a></p>
 		<p><a href="#" id="goodmore">show / hide timeline breakdown</a></p>
 		<div style="float:left">
 			<img src="time-detail-pie.png"></img>
