Add CPU / Wall time plots to template.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -160,6 +160,10 @@
 		</div>
 		<div style="margin-left:410px;">
 			<img src="all-jobs-hist.png"></img>
+		{% if good_jobs %}
+			<img src="cpu-wall-hist.png"></img>
+			<img src="cpu-wall-int-hist.png"></img>
+		{% endif %}
 		</div>
 		{% endif %}
 
