--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -5,15 +5,20 @@
 		<style>
 			@import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic);
 
+			body {
+				font-family:"Trebuchet MS";
+			}
+
 			.lobster {font-family: 'Lobster Two', cursive;}
 
-			body {font-family:"Trebuchet MS";}
+			.center {
+				margin-left: auto;
+				margin-right: auto;
+			}
 
 			h1, h2, h3 {clear: left}
 
 			table {
-				width:auto;
-				margin-bottom:50px;
 				border-collapse:collapse;
 			}
 
@@ -36,44 +41,75 @@
 			}
 
 			ul.img-list {
-			padding: 0;
+				padding: 0;
 			}
 
 			ul.img-list li {
-			display: inline-block;
-			position: relative;
+				display: inline-block;
+				position: relative;
 			}
 
 			ul.img-list img {
-			border-radius: 15px;
+				border-radius: 15px;
 			}
 
 			span.text-content {
-			background: rgba(0,0,0,0.6);
-			border-radius: 15px;
-			color: white;
-			display: table;
-			font-size: 1.5em;
-			height: 150px;
-			left: 15px;
-			position: absolute;
-			top: -5px;
-			width: 750px;
-			opacity: 0;
-			-webkit-transition: opacity 500ms;
-			-moz-transition: opacity 500ms;
-			-o-transition: opacity 500ms;
-			transition: opacity 500ms;
+				background: rgba(0,0,0,0.6);
+				border-radius: 15px;
+				color: white;
+				display: table;
+				font-size: 1.5em;
+				height: 150px;
+				left: 15px;
+				position: absolute;
+				top: -5px;
+				width: 750px;
+				opacity: 0;
+				-webkit-transition: opacity 500ms;
+				-moz-transition: opacity 500ms;
+				-o-transition: opacity 500ms;
+				transition: opacity 500ms;
 			}
 
 			span.text-content span {
-			display: table-cell;
-			text-align: center;
-			vertical-align: middle;
+				display: table-cell;
+				text-align: center;
+				vertical-align: middle;
 			}
 
 			ul.img-list li:hover span.text-content {
-			opacity: 1;
+				opacity: 1;
+			}
+
+			.button {
+				border: 1px solid #666;
+				border-radius: .5em;
+				padding: .3em;
+			}
+
+			.button a {
+				color: black;
+				text-decoration: none;
+			}
+
+			.right {
+				border-top-left-radius: 0;
+				border-bottom-left-radius: 0;
+				margin-left: 0;
+			}
+
+			.left {
+				border-top-right-radius: 0;
+				border-bottom-right-radius: 0;
+				margin-right: 0;
+			}
+
+			.depressed {
+				box-shadow: 0px -1em 5px 0px rgba(0,0,0,0.08) inset;
+			}
+
+			.pressed {
+				box-shadow: 0px 1em 10px 0px rgba(0,0,0,0.28) inset;
 			}
 		</style>
 
@@ -104,25 +140,39 @@
 
 				$("a#tasksummary").bind('click', function() {
 					$("tr.tasksummary").toggle();
+					$("span#tasksummary").toggleClass("depressed");
+					$("span#tasksummary").toggleClass("pressed");
 					return false;
 				});
 
 				$("a#goodmore").bind('click', function() {
 					$("div.good.more").slideToggle();
+					$("span#goodmore").toggleClass("depressed");
+					$("span#goodmore").toggleClass("pressed");
 					return false;
 				});
 
 				$("a#goodhist").bind('click', function() {
 					src_replace("img.good", "-prof", "-hist");
+					$("span#goodhist.left").removeClass("depressed");
+					$("span#goodhist.left").addClass("pressed");
+					$("span#goodhist.right").removeClass("pressed");
+					$("span#goodhist.right").addClass("depressed");
 					return false;
 				});
 				$("a#goodprof").bind('click', function() {
 					src_replace("img.good", "-hist", "-prof");
+					$("span#goodhist.right").removeClass("depressed");
+					$("span#goodhist.right").addClass("pressed");
+					$("span#goodhist.left").removeClass("pressed");
+					$("span#goodhist.left").addClass("depressed");
 					return false;
 				});
 
 				$("a#logs").bind('click', function() {
-					$("table#logs").toggle();
+					$("table#logs").slideToggle();
+					$("span#logs").toggleClass("depressed");
+					$("span#logs").toggleClass("pressed");
 					return false;
 				});
 			});
@@ -130,7 +180,7 @@
 	</head>
 	<body>
 		<h1>Task Summary</h1>
-		<p><a href="#" id="tasksummary">show / hide</a></p>
+		<p><span class="button depressed" id="tasksummary"><a href="#" id="tasksummary">show breakdown</a></span></p>
 		<table>
 			<tr>
 				<th>Task</th>
@@ -169,12 +219,14 @@
 
 		<h2>Successful Jobs</h2>
 		{% if good_jobs %}
-		<p><a href="#" id="goodhist">statistics</a> <a href="#" id="goodprof">profile</a></p>
-		<p><a href="#" id="goodmore">show / hide timeline breakdown</a></p>
 		<div style="float:left">
 			<img src="time-detail-pie.png"></img>
 		</div>
 		<div style="margin-left:410px;">
+			<p>
+				<span id="goodhist" class="button left pressed"><a href="#" id="goodhist">statistics</a></span><span id="goodhist" class="button right depressed"><a href="#" id="goodprof">profile</a></span>
+				<span id="goodmore" class="button depressed"><a href="#" id="goodmore">show timeline breakdown</a></span>
+			</p>
 			<div class="good more"><ul class="img-list">
 				{{ label_wrapper('eviction-hist.png', 'Time lost to eviction', class="good") }}
 			</div></ul>
@@ -212,7 +264,7 @@
 		</div>
 		<div style="margin-left:410px;">
 			<img src="failed-jobs-hist.png"></img>
-			<p><a href="#" id="logs">show / hide</a> log files</p>
+			<p><span id="logs" class="button depressed"><a href="#" id="logs">show log files</a></span></p>
 			<table id="logs">
 				<tr>
 					<th>Exit code</th>
