Indicate that the task summary is for the whole run.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -211,7 +211,7 @@
 			{% endif %}
 		</table>
 
-		<h1>Task Summary</h1>
+		<h1>Overall Task Summary</h1>
 		<p><span class="button depressed" id="tasksummary"><a href="#" id="tasksummary">show breakdown</a></span></p>
 		<table class="fancy">
 			<tr>
