--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -215,12 +215,14 @@
 		<p><span class="button depressed" id="tasksummary"><a href="#" id="tasksummary">show breakdown</a></span></p>
 		<table class="fancy">
 			<tr>
-				<th>Task</th>
+				<th>task</th>
 				<th>events</th>
-				<th>left</th>
-				<th>read</th>
-				<th>written</th>
+				<th>events read</th>
+				<th>events written</th>
+                <th>unmasked lumis</th>
+                <th>lumis written</th>
 				<th>progress</th>
+                {% if jsons|length > 0 %}<th>json</th>{% endif %}
 			</tr>
 			{% for row in summary %}
 			{% if row[0] is sum %}
