Add total lumis (including masked ones) to the summary table.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -219,6 +219,7 @@
 				<th>events</th>
 				<th>events read</th>
 				<th>events written</th>
+                <th>total lumis</th>
                 <th>unmasked lumis</th>
                 <th>lumis written</th>
 				<th>progress</th>
