Include the plot production time on the plotting page.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -209,6 +209,10 @@
 				<td>{{plot_endtime|datetime}}</td>
 			</tr>
 			{% endif %}
+			<tr>
+				<td>Plots updated: </td>
+				<td>{{plot_time|datetime}}</td>
+			</tr>
 		</table>
 
 		<h1>Overall Task Summary</h1>
