--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -136,6 +136,7 @@
 			$(document).ready(function() {
 				$("tr.tasksummary").hide();
 				$("div.good.more").hide();
+				$("div.merge.more").hide();
 				$("table#logs").hide();
 				$("div.foreman.more").hide();				
 
@@ -153,10 +154,34 @@
 					return false;
 				});
 				
+				$("a#mergemore").bind('click', function() {
+					$("div.merge.more").slideToggle();
+					$("span#mergemore").toggleClass("depressed");
+					$("span#mergemore").toggleClass("pressed");
+					return false;
+				});
+				
 				$("a#foremanmore").bind('click', function() {
 					$("div.foreman.more").slideToggle();
 					$("span#foremanmore").toggleClass("depressed");
 					$("span#foremanmore").toggleClass("pressed");
+					return false;
+				});
+
+				$("a#mergehist").bind('click', function() {
+					src_replace("img.merge", "-prof", "-hist");
+					$("span#mergehist.left").removeClass("depressed");
+					$("span#mergehist.left").addClass("pressed");
+					$("span#mergehist.right").removeClass("pressed");
+					$("span#mergehist.right").addClass("depressed");
+					return false;
+				});
+				$("a#mergeprof").bind('click', function() {
+					src_replace("img.merge", "-hist", "-prof");
+					$("span#mergehist.right").removeClass("depressed");
+					$("span#mergehist.right").addClass("pressed");
+					$("span#mergehist.left").removeClass("pressed");
+					$("span#mergehist.left").addClass("depressed");
 					return false;
 				});
 
@@ -270,7 +295,7 @@
 		<h2>Successful Jobs</h2>
 		{% if good_jobs %}
 		<div style="float:left">
-			<img src="time-detail-pie.png"></img>
+			<img src="good-time-detail-pie.png"></img>
 		</div>
 		<div style="margin-left:410px;">
 			<p>
@@ -278,33 +303,79 @@
 				<span id="goodmore" class="button depressed"><a href="#" id="goodmore">show timeline breakdown</a></span>
 			</p>
 			<div class="good more"><ul class="img-list">
-				{{ label_wrapper('eviction-hist.png', 'Time lost to eviction', class="good") }}
+				{{ label_wrapper('good-eviction-hist.png', 'Time lost to eviction', class="good") }}
 			</div></ul>
 			<div><ul class="img-list">
-				{{ label_wrapper('runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
-				{{ label_wrapper('overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='good') }}
+				{{ label_wrapper('good-runtime-hist.png', 'Time from wrapper start to processing end', class='good') }}
+				{{ label_wrapper('good-overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='good') }}
 			</ul></div>
 			<div class="good more"><ul class="img-list">
-				{{ label_wrapper('stage-in-hist.png', 'Time to transfer input files', class='good') }}
-				{{ label_wrapper('startup-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='good') }}
-				{{ label_wrapper('setup-release-hist.png', 'Time to set up release and initialize cms environment', class='good') }}
-				{{ label_wrapper('setup-cms-hist.png', 'Time from from wrapper ready to file requested', class='good') }}
-				{{ label_wrapper('file-open-hist.png', 'Time between requesting and opening file', class='good') }}
-				{{ label_wrapper('setup-job-hist.png', 'Time between opening file and begin processing the first event', class='good') }}
+				{{ label_wrapper('good-transfer-in-hist.png', 'Time to transfer input files', class='good') }}
+				{{ label_wrapper('good-startup-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='good') }}
+				{{ label_wrapper('good-stage-in-hist.png', 'Time to stage in all additional input files', class='good more') }}
+				{{ label_wrapper('good-prologue-hist.png', 'Time to run the prologue command', class='good more') }}
+				{{ label_wrapper('good-setup-release-hist.png', 'Time to set up release and initialize cms environment', class='good') }}
+				{{ label_wrapper('good-setup-cms-hist.png', 'Time from from wrapper ready to file requested', class='good') }}
+				{{ label_wrapper('good-file-open-hist.png', 'Time between requesting and opening file', class='good') }}
+				{{ label_wrapper('good-setup-job-hist.png', 'Time between opening file and begin processing the first event', class='good') }}
 			</ul></div>
 			<div><ul class="img-list">
-				{{ label_wrapper('processing-hist.png', 'Time between begin processing the first event and finish processing', class='good') }}
+				{{ label_wrapper('good-processing-hist.png', 'Time between begin processing the first event and finish processing', class='good') }}
 			</ul></div>
 			<div class="good more"><ul class="img-list">
-				{{ label_wrapper('processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='good more') }}
-				{{ label_wrapper('processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='good more') }}
-				{{ label_wrapper('stage-out-chirp-hist.png', 'Time to chirp_put all output files to the stageout directory', class='good more') }}
-				{{ label_wrapper('stage-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='good more') }}
-				{{ label_wrapper('stage-out-wq-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='good more') }}
+				{{ label_wrapper('good-processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='good more') }}
+				{{ label_wrapper('good-processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='good more') }}
+				{{ label_wrapper('good-epilogue-hist.png', 'Time to run the epilogue command', class='good more') }}
+				{{ label_wrapper('good-stage-out-hist.png', 'Time to stage out all output files', class='good more') }}
+				{{ label_wrapper('good-transfer-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='good more') }}
+				{{ label_wrapper('good-transfer-out-wq-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='good more') }}
 			</ul></div>
 		</div>
 		{% else %}
 		<p>No successful jobs yet!</p>
+		{% endif %}
+
+		<h2>Merge Jobs</h2>
+		{% if merge_jobs %}
+		<div style="float:left">
+			<img src="time-detail-pie.png"></img>
+		</div>
+		<div style="margin-left:410px;">
+			<p>
+				<span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span>
+				<span id="mergemore" class="button depressed"><a href="#" id="mergemore">show timeline breakdown</a></span>
+			</p>
+			<div class="merge more"><ul class="img-list">
+				{{ label_wrapper('merge-eviction-hist.png', 'Time lost to eviction', class="merge") }}
+			</div></ul>
+			<div><ul class="img-list">
+				{{ label_wrapper('merge-runtime-hist.png', 'Time from wrapper start to processing end', class='merge') }}
+				{{ label_wrapper('merge-overhead-hist.png', 'Time from wrapper start to begin processing the first event', class='merge') }}
+			</ul></div>
+			<div class="merge more"><ul class="img-list">
+				{{ label_wrapper('merge-transfer-in-hist.png', 'Time to transfer input files', class='merge') }}
+				{{ label_wrapper('merge-startup-hist.png', 'Time between completing the input file transfer and starting the wrapper', class='merge') }}
+				{{ label_wrapper('merge-stage-in-hist.png', 'Time to stage in all additional input files', class='merge more') }}
+				{{ label_wrapper('merge-prologue-hist.png', 'Time to run the prologue command', class='merge more') }}
+				{{ label_wrapper('merge-setup-release-hist.png', 'Time to set up release and initialize cms environment', class='merge') }}
+				{{ label_wrapper('merge-setup-cms-hist.png', 'Time from from wrapper ready to file requested', class='merge') }}
+				{{ label_wrapper('merge-file-open-hist.png', 'Time between requesting and opening file', class='merge') }}
+				{{ label_wrapper('merge-setup-job-hist.png', 'Time between opening file and begin processing the first event', class='merge') }}
+			</ul></div>
+			<div><ul class="img-list">
+				{{ label_wrapper('merge-processing-hist.png', 'Time between begin processing the first event and finish processing', class='merge') }}
+			</ul></div>
+			<div class="merge more"><ul class="img-list">
+				{{ label_wrapper('merge-processing-cpu-hist.png', 'CPU processing time (from cmssw)', class='merge more') }}
+				{{ label_wrapper('merge-processing-non-cpu-hist.png', 'Total processing time minus CPU processing time', class='merge more') }}
+				{{ label_wrapper('merge-epilogue-hist.png', 'Time to run the epilogue command', class='merge more') }}
+				{{ label_wrapper('merge-stage-out-hist.png', 'Time to stage out all output files', class='merge more') }}
+				{{ label_wrapper('merge-transfer-out-wait-hist.png', 'Time between stageout completion and WQ task.receive_output_start', class='merge more') }}
+				{{ label_wrapper('merge-transfer-out-wq-hist.png', 'Time between WQ task.receive_output_start and task.receive_output_finish', class='merge more') }}
+			</ul></div>
+		</div>
+		{% else %}
+		<p>No successful merge jobs yet!</p>
 		{% endif %}
 
 		<h2>Failed Jobs</h2>
