--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -338,7 +338,7 @@
 		<h2>Merge Jobs</h2>
 		{% if merge_jobs %}
 		<div style="float:left">
-			<img src="time-detail-pie.png"></img>
+			<img src="merge-time-detail-pie.png"></img>
 		</div>
 		<div style="margin-left:410px;">
 			<p>
