--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -138,7 +138,7 @@
 				$("div.good.more").hide();
 				$("div.merge.more").hide();
 				$("table#logs").hide();
-				$("div.foreman.more").hide();				
+				$("div.foreman.more").hide();
 
 				$("a#tasksummary").bind('click', function() {
 					$("tr.tasksummary").toggle();
@@ -153,14 +153,14 @@
 					$("span#goodmore").toggleClass("pressed");
 					return false;
 				});
-				
+
 				$("a#mergemore").bind('click', function() {
 					$("div.merge.more").slideToggle();
 					$("span#mergemore").toggleClass("depressed");
 					$("span#mergemore").toggleClass("pressed");
 					return false;
 				});
-				
+
 				$("a#foremanmore").bind('click', function() {
 					$("div.foreman.more").slideToggle();
 					$("span#foremanmore").toggleClass("depressed");
@@ -417,6 +417,7 @@
 			<img src="turnover-hist.png"></img>
 			<img src="tasks-plot.png"></img>
 			<img src="fraction-hist.png"></img>
+                        <img src="memory-per-core-plot.png"></img>
 			{% if good_jobs %}
 			<img src="output-hist.png"></img>
 			<img src="output-total-plot.png"></img>
