--- a/web/lobster.html
+++ b/web/lobster.html
@@ -41,7 +41,7 @@
 								<li><a href="index.html">homepage</a></li>
 								<li><a href="monitoring.html">monitoring</a></li>
 								<li><a href="https://github.com/matz-e/lobster">source</a></li>
-								<li class="active"><a href="papers.html">papers</a></li>
+								<li><a href="papers.html">papers</a></li>
 								<li><a href="talks.html">talks</a></li>
 							</ul>
 						</nav>
