Rename homepage → home.

--- a/web/index.html
+++ b/web/index.html
@@ -37,7 +37,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li class="active"><a href="index.html">homepage</a></li>
+								<li class="active"><a href="index.html">home</a></li>
 								<li><a href="monitoring.html">monitoring</a></li>
 								<li><a href="https://github.com/matz-e/lobster">source</a></li>
 								<li><a href="papers.html">papers</a></li>
