--- a/web/papers.html
+++ b/web/papers.html
@@ -38,7 +38,7 @@
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
-								<li><a href="index.html">homepage</a></li>
+								<li><a href="index.html">home</a></li>
 								<li><a href="monitoring.html">monitoring</a></li>
 								<li><a href="https://github.com/matz-e/lobster">source</a></li>
 								<li class="active"><a href="papers.html">papers</a></li>
