Attribution for banner.

--- a/web/talks.html
+++ b/web/talks.html
@@ -99,6 +99,7 @@ Released for free under the Creative Commons Attribution 3.0 license (templated.
     <div id="copyright">
       <div class="container">
         Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				Banner: <a href="http://commons.wikimedia.org/wiki/File:Lobster_Dinner_(6013079655).jpg"> Benson Kua / CC-BY-SA-2.0</a>
       </div>
     </div>
 
