--- a/web/index.html
+++ b/web/index.html
@@ -211,7 +211,12 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://templated.co">TEMPLATED</a> Images: <a href="http://unsplash.com">Unsplash</a> (<a href="http://unsplash.com/cc0">CC0</a>)
+				Design: <a
+					href="http://templated.co">TEMPLATED</a>
+				Images: <a
+					href="http://unsplash.com">Unsplash</a>
+				(<a href="http://unsplash.com/cc0">CC0</a>)
+				Banner: <a href="http://commons.wikimedia.org/wiki/File:Lobster_Dinner_(6013079655).jpg"> Benson Kua / CC-BY-SA-2.0</a>
 			</div>
 		</div>
 
