Fix button for merge plots.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -342,7 +342,8 @@
 		</div>
 		<div style="margin-left:410px;">
 			<p>
-				<span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span>
+				<span id="goodhist" class="button left pressed"><a href="#" id="goodhist">statistics</a></span><span id="goodhist" class="button right depressed"><a href="#" id="goodprof">profile</a></span>
+				<!-- <span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span> -->
 				<span id="mergemore" class="button depressed"><a href="#" id="mergemore">show timeline breakdown</a></span>
 			</p>
 			<div class="merge more"><ul class="img-list">
