Add resource monitoring to plotting page. Fixes #219.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -305,6 +305,8 @@
             <a href="good-time-detail-pie.png"><img src="good-time-detail-pie.png"></img></a>
         </div>
         <div style="margin-left:410px;">
+            <a href="good-memory-hist.png"><img src="good-memory-hist.png"></img></a>
+            <a href="good-workdir-footprint-hist.png"><img src="good-workdir-footprint-hist.png"></img></a>
             <p>
                 <span id="goodhist" class="button left pressed"><a href="#" id="goodhist">statistics</a></span><span id="goodhist" class="button right depressed"><a href="#" id="goodprof">profile</a></span>
                 <span id="goodmore" class="button depressed"><a href="#" id="goodmore">show timeline breakdown</a></span>
@@ -348,6 +350,7 @@
             <a href="merge-time-detail-pie.png"><img src="merge-time-detail-pie.png"></img></a>
         </div>
         <div style="margin-left:410px;">
+            <a href="merge-memory-hist.png"><img src="merge-memory-hist.png"></img></a>
             <p>
                 <span id="mergehist" class="button left pressed"><a href="#" id="mergehist">statistics</a></span><span id="mergehist" class="button right depressed"><a href="#" id="mergeprof">profile</a></span>
                 <span id="mergemore" class="button depressed"><a href="#" id="mergemore">show timeline breakdown</a></span>
@@ -392,6 +395,8 @@
         </div>
         <div style="margin-left:410px;">
             <a href="failed-jobs-hist.png"><img src="failed-jobs-hist.png"></img></a>
+            <a href="failed-memory-hist.png"><img src="failed-memory-hist.png"></img></a>
+            <a href="failed-workdir-footprint-hist.png"><img src="failed-workdir-footprint-hist.png"></img></a>
             <p><span id="logs" class="button depressed"><a href="#" id="logs">show log files</a></span></p>
             <table id="logs" class="fancy">
                 <tr>
@@ -424,7 +429,6 @@
             <a href="turnover-hist.png"><img src="turnover-hist.png"></img></a>
             <a href="tasks-plot.png"><img src="tasks-plot.png"></img></a>
             <a href="fraction-hist.png"><img src="fraction-hist.png"></img></a>
-            <a href="memory-per-core-plot.png"><img src="memory-per-core-plot.png"></img></a>
             {% if good_jobs %}
             <a href="output-hist.png"><img src="output-hist.png"></img></a>
             <a href="output-total-plot.png"><img src="output-total-plot.png"></img></a>
