Make paused jobit information available in the plotting.
Add link to log directory in the "jobits paused", which contains logs of
failed tasks of jobits above failure threshold and a list of skipped files
per workflow.  Hopefully satisfies Anna's comment on #210.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -262,7 +262,13 @@
             <tr class="tasksummary{{ loop.cycle('', ' alt') }}">
             {% endif %}
                 {% for cell in row %}
-                <td{% if row == summary[-1] %} class="footer"{% endif %}>{{ cell }}</td>
+                <td{% if row == summary[-1] %} class="footer"{% endif %}>
+                    {% if cell == row[-2] and cell > 0 and row != summary[-1] %}
+                        <a href="logs/{{row[0]}}">{{cell}}</a>
+                    {% else %}
+                        {{ cell }}
+                    {% endif %}
+                </td>
                     {% if cell == row[-1] and jsons|length > 0%}
                         {% if row == summary[-1] %}
                         <td class="footer"></td>
