--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -345,7 +345,7 @@
         <h2>Merge Jobs</h2>
         {% if merge_jobs %}
         <div style="float:left">
-            <a href="merge-time-detail-pie.png"><img src="merge-time-detail-pie.png"></img><a/>
+            <a href="merge-time-detail-pie.png"><img src="merge-time-detail-pie.png"></img></a>
         </div>
         <div style="margin-left:410px;">
             <p>
