Add worker death stats to the plotting page. Fixes #221.

--- a/lobster/cmssw/data/template.html
+++ b/lobster/cmssw/data/template.html
@@ -422,6 +422,7 @@
         <div style="margin-left:410px;">
             <a href="workers-plot.png"><img src="workers-plot.png"></img></a>
             <a href="turnover-hist.png"><img src="turnover-hist.png"></img></a>
+            <a href="worker-deaths-hist.png"><img src="worker-deaths-hist.png"></img></a>
             <a href="tasks-plot.png"><img src="tasks-plot.png"></img></a>
             <a href="fraction-hist.png"><img src="fraction-hist.png"></img></a>
             <a href="memory-per-core-plot.png"><img src="memory-per-core-plot.png"></img></a>
