Change jobits → units, in partial fulfillment of #133.

--- a/lobster/commands/data/template.html
+++ b/lobster/commands/data/template.html
@@ -433,7 +433,7 @@
             {% if good_jobs %}
             <a href="output-hist.png"><img src="output-hist.png"></img></a>
             <a href="output-total-plot.png"><img src="output-total-plot.png"></img></a>
-            <a href="jobits-total-plot.png"><img src="jobits-total-plot.png"></img></a>
+            <a href="units-total-plot.png"><img src="units-total-plot.png"></img></a>
             {% else %}
             <p>No output yet!</p>
             {% endif %}
