--- a/lobster/commands/data/template.html
+++ b/lobster/commands/data/template.html
@@ -10,9 +10,9 @@
                 font-family:"Trebuchet MS";
                 margin: 0 auto;
                 margin-top: 75px;
-                padding: 0 2em;
+                padding: 0;
                 width: 100%;
-                max-width: 1280px;
+                max-width: 1240px;
             }
 
             :target:before {
@@ -45,12 +45,16 @@
                 display: flex;
                 flex-direction: row;
                 width: 100%;
+
+                margin: 0;
+                padding: 0;
             }
 
             nav ul li {
                 flex: 1 1 100%;
                 display: block;
                 list-style-type: none;
+                text-align: center;
             }
 
             nav > ul > li > a {
@@ -66,6 +70,8 @@
                 background-color: #aaa;
                 display: none;
                 position: absolute;
+                width: 25%;
+                padding-top: 1em;
             }
 
             nav > ul > li:hover a + div {
@@ -77,6 +83,7 @@
                 flex-direction: column;
                 margin: 0;
                 padding: 0;
+                width: 100%;
             }
 
             nav > ul > li a + div > ul > li {
@@ -84,6 +91,7 @@
                 display: block;
                 margin: 0;
                 padding: .5em;
+                text-align: center;
             }
 
             nav > ul > li a + div > ul > li > a {
@@ -100,26 +108,26 @@
              @media screen and (min-width: 1280px) {
                 .sidebar {
                     float: left;
-                    padding: 20px;
+                    padding: 10px;
                     width: 400px;
                 }
 
                 .maincontent {
                     float: left;
-                    padding: 20px
+                    padding: 10px
                     width: 800px;
                     max-width: 800px;
                 }
              }
              @media screen and (max-width: 1279px) {
                 .sidebar {
-                    padding: 20px;
+                    padding: 10px;
                     width: 400px;
                     margin: auto;
                 }
 
                 .maincontent {
-                    padding: 20px
+                    padding: 10px
                     width: 800px;
                     max-width: 800px;
                     margin: auto;
