--- a/lobster/commands/data/template.html
+++ b/lobster/commands/data/template.html
@@ -3,6 +3,7 @@
     <head>
         <title>{{id}}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="refresh" content="900">
         <style>
             @import url(http://fonts.googleapis.com/css?family=Lobster+Two:700italic);
 
